add build scripts

--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -1,28 +1,45 @@
 {
   "name": "@wework/ray-core-react",
   "version": "0.0.0",
-  "description": "A react wrapper for @wework/ray-core",
+  "description": "A React wrapper component library for the Ray design system",
   "main": "index.js",
   "private": true,
   "scripts": {
+    "build": "npx gulp scripts:es scripts:umd scripts:compiled",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6007",
-    "build-storybook": "build-storybook"
+    "prebuild": "rm -rf dist/",
+    "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/core-react/storybook -s ./stories/static"
   },
   "author": "Adam Raider <adam.raider@wework.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@wework/ray-core": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
-    "jest": "^24.8.0"
+    "clsx": "^1.0.4",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "jest": "^24.8.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "rollup": "^1.16.7",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0"
   },
   "publishConfig": {
     "access": "private"
@@ -32,5 +49,15 @@
     "react",
     "design-system"
   ],
-  "preid": "next"
+  "files": [
+    "src",
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+  "preid": "next",
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
