--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
       "conventionalCommits": true
     },
     "version": {
-      "message": "chore(release): publish %s",
+      "message": "chore(release): publish",
       "conventionalCommits": true,
       "gitHubRelease": true,
       "allowBranch": "*"
