package: canary release on every commit (#167)
* package: use same version, canary release on merge

* use the correct jbo name

* remove publish string from publish commit

* tag pr commits with review dist tag

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
       "message": "chore(release): publish",
       "conventionalCommits": true,
       "gitHubRelease": true,
-      "allowBranch": "master"
+      "allowBranch": "*"
     }
   },
   "packages": ["packages/*"],
