fix testing commands

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "dev:docs": "lerna run dev --scope=\"ray-website-gatsby\" --parallel",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "bootstrap": "npx lerna bootstrap",
-    "test": "jest",
+    "#": "TODO: Each package should be reponsible for their own test suite",
+    "test": "jest --testPathIgnorePatterns=\"/core-react/\"",
     "build": "npx lerna run build",
     "clean": "rm -rf .out",
+    "lerna:test": "npx lerna run test --parallel",
     "lerna:clean": "npx lerna run clean",
     "lerna:publish": "npx lerna publish --yes",
     "lerna:version": "npx lerna version --yes",
