--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/preset-env": "7.3.4",
     "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
     "commitizen": "^3.0.7",
     "coveralls": "3.0.3",
     "cz-conventional-changelog": "2.1.0",
@@ -45,7 +46,7 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "bootstrap": "npx lerna bootstrap",
     "#": "TODO: Each package should be reponsible for their own test suite",
-    "test": "jest --testPathIgnorePatterns=\"/core-react/\"",
+    "test": "jest",
     "build": "npx lerna run build",
     "clean": "rm -rf .out",
     "lerna:test": "npx lerna run test --parallel",
