--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -31,6 +31,8 @@
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^1.4.0",
