Revert "chore(release): version everything together (#194)"
This reverts commit 4ac0e1c1d22b195bbba6d337b1d2e8250f359201.

--- a/lerna.json
+++ b/lerna.json
@@ -4,14 +4,14 @@
       "conventionalCommits": true
     },
     "version": {
-      "message": "chore(release): %s",
+      "message": "chore(release): publish",
       "conventionalCommits": true,
       "gitHubRelease": true,
-      "allowBranch": "master"
+      "allowBranch": "*"
     }
   },
   "packages": ["packages/*"],
-  "version": "1.8.5",
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
