--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -48,7 +48,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "typescript": "^3.5.3"
   },
   "publishConfig": {
     "access": "public"
