circle deploy to netlify hook

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,27 @@ jobs:
           name: 'Publish release to NPM registry'
           command: yarn lerna:publish
 
+  deploy_to_netlify:
+    executor:
+      name: docker-config
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - 'f2:ad:87:6b:39:67:71:e0:7e:4e:2a:63:bd:4e:65:1a'
+      - checkout
+      - attach_workspace: { at: '.' }
+      - get_npm_packages_cache
+      - run:
+          name: 'Build packages'
+          command: yarn build
+      - run:
+          name: 'Configure github user details for publish commit'
+          command: git config --global user.email "adam.raider@wework.com" && git config --global user.name "adamraider"
+      - npm_authenticate
+      - run:
+          name: 'Publish release to NPM registry'
+          command: yarn lerna:publish
+
 workflows:
   version: 2
   'ray-ci-cd':
