graduate to prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,26 +119,13 @@ jobs:
           name: 'Publish release to NPM registry'
           command: yarn lerna:publish
 
-  deploy_to_netlify:
+  graduate_master_to_production:
     executor:
       name: docker-config
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 'f2:ad:87:6b:39:67:71:e0:7e:4e:2a:63:bd:4e:65:1a'
-      - checkout
-      - attach_workspace: { at: '.' }
-      - get_npm_packages_cache
       - run:
-          name: 'Build packages'
-          command: yarn build
-      - run:
-          name: 'Configure github user details for publish commit'
-          command: git config --global user.email "adam.raider@wework.com" && git config --global user.name "adamraider"
-      - npm_authenticate
-      - run:
-          name: 'Publish release to NPM registry'
-          command: yarn lerna:publish
+          name: 'Deploy'
+          command: git push origin master:production
 
 workflows:
   version: 2
@@ -162,6 +149,13 @@ workflows:
           requires:
             - test-unit
             - test-visual-regression
+          filters:
+            branches:
+              only:
+                - master
+      - graduate_master_to_production:
+          requires:
+            - build_and_release
           filters:
             branches:
               only:
