--- a/lerna.json
+++ b/lerna.json
@@ -4,14 +4,14 @@
       "conventionalCommits": true
     },
     "version": {
-      "message": "chore(release): publish",
+      "message": "chore(release): publish %s",
       "conventionalCommits": true,
       "gitHubRelease": true,
-      "allowBranch": "*"
+      "allowBranch": "master"
     }
   },
   "packages": ["packages/*"],
-  "version": "independent",
+  "version": "1.8.5",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
