--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -4,6 +4,7 @@
   "description": "A React wrapper component library for the Ray design system",
   "main": "dist/umd/index.js",
   "module": "dist/es/index.js",
+  "types": "index.d.ts",
   "scripts": {
     "dev": "yarn storybook",
     "build": "gulp scripts:es scripts:umd scripts:compiled",
@@ -47,7 +48,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "typescript": "^3.5.3"
   },
   "publishConfig": {
     "access": "public"
@@ -61,7 +63,8 @@
     "src",
     "dist",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "index.d.ts"
   ],
   "peerDependencies": {
     "react": "^16.8.6",
