--- a/packages/product-react/package.json
+++ b/packages/product-react/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/umd/index.js",
   "module": "dist/es/index.js",
+  "types": "index.d.ts",
   "scripts": {
     "dev": "yarn storybook",
     "build": "gulp scripts:es scripts:umd scripts:compiled",
