--- a/packages/product-react/package.json
+++ b/packages/product-react/package.json
@@ -19,7 +19,8 @@
     "@babel/preset-typescript": "^7.3.3",
     "@wework/ray-core": "^1.9.0",
     "@wework/ray-core-react": "^1.10.1",
-    "clsx": "^1.0.4"
+    "clsx": "^1.0.4",
+    "typescript": "^3.6.2"
   },
   "repository": {
     "type": "git",
