--- a/lerna.json
+++ b/lerna.json
@@ -10,8 +10,10 @@
       "allowBranch": "master"
     }
   },
-  "packages": ["packages/*"],
-  "version": "1.10.2",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.11.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
