--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@babel/core": "7.4.4",
     "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/preset-env": "7.3.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.18",
+    "@types/react-dom": "^16.9.0",
+    "@types/storybook__react": "^4.0.2",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "commitizen": "^3.0.7",
