--- a/packages/product-react/package.json
+++ b/packages/product-react/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/umd/index.js",
   "module": "dist/es/index.js",
+  "types": "index.d.ts",
   "scripts": {
     "dev": "yarn storybook",
     "build": "gulp scripts:es scripts:umd scripts:compiled",
@@ -17,7 +18,9 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.3.3",
     "@wework/ray-core": "^1.9.0",
-    "clsx": "^1.0.4"
+    "@wework/ray-core-react": "^1.10.1",
+    "clsx": "^1.0.4",
+    "typescript": "^3.6.2"
   },
   "repository": {
     "type": "git",
@@ -26,13 +29,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -49,7 +53,10 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-typescript2": "^0.24.0",
+    "typescript": "^3.6.2"
   },
   "publishConfig": {
     "access": "public"
