add product grid to ray product

--- a/packages/product-react/package.json
+++ b/packages/product-react/package.json
@@ -40,11 +40,13 @@
     "babel-loader": "^8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
