--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
       - checkout
       - attach_workspace: { at: '.' }
       - get_npm_packages_cache
+      - build
       - run:
           name: Run unit tests
           command: yarn test --coverage
