--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -20,56 +20,56 @@
     "netlify:build": "gatsby build && cp -r static/* ../../.out/ && cp -r public/* ../../.out/"
   },
   "dependencies": {
-    "@babel/core": "7.4.4",
+    "@babel/core": "7.6.2",
     "@reach/router": "^1.2.1",
     "add": "2.0.6",
-    "color": "^3.1.0",
+    "color": "^3.1.2",
     "custom-event": "^1.0.1",
-    "dotenv": "^6.1.0",
-    "gatsby": "^2.1.23",
-    "gatsby-image": "2.0.20",
-    "gatsby-plugin-google-analytics": "^2.0.19",
-    "gatsby-plugin-manifest": "^2.0.10",
-    "gatsby-plugin-react-helmet": "3.0.12",
+    "dotenv": "^8.1.0",
+    "gatsby": "^2.15.28",
+    "gatsby-image": "2.2.23",
+    "gatsby-plugin-google-analytics": "^2.1.19",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-react-helmet": "3.1.10",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sass": "2.0.4",
-    "gatsby-plugin-sharp": "2.0.13",
-    "gatsby-react-router-scroll": "^2.0.1",
-    "gatsby-remark-autolink-headers": "^2.0.11",
+    "gatsby-plugin-sass": "2.1.17",
+    "gatsby-plugin-sharp": "2.2.27",
+    "gatsby-react-router-scroll": "^2.1.11",
+    "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-component": "^1.1.3",
-    "gatsby-remark-copy-linked-files": "2.0.6",
-    "gatsby-remark-embed-video": "^1.4.0",
+    "gatsby-remark-copy-linked-files": "2.1.23",
+    "gatsby-remark-embed-video": "^2.0.0",
     "gatsby-remark-embedded-codesandbox": "^1.2.0",
-    "gatsby-remark-images": "3.0.11",
-    "gatsby-source-filesystem": "2.0.9",
-    "gatsby-transformer-remark": "^2.3.1",
-    "gatsby-transformer-sharp": "2.1.8",
-    "markdown-it": "^8.4.2",
-    "markdown-loader": "^4.0.0",
-    "prismjs": "^1.15.0",
+    "gatsby-remark-images": "3.1.25",
+    "gatsby-source-filesystem": "2.1.28",
+    "gatsby-transformer-remark": "^2.6.26",
+    "gatsby-transformer-sharp": "2.2.19",
+    "markdown-it": "^10.0.0",
+    "markdown-loader": "^5.1.0",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.6.2",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-ga": "^2.5.5",
+    "react-ga": "^2.6.0",
     "react-helmet": "^5.2.0",
-    "react-router": "^5.0.0"
+    "react-router": "^5.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.0.5",
-    "@storybook/addon-info": "^5.0.5",
-    "@storybook/addon-knobs": "^5.0.5",
-    "@storybook/addon-options": "^5.0.5",
-    "@storybook/react": "^5.0.5",
-    "@wework/ray-core": "file:../core",
-    "babel-loader": "8.0.5",
-    "cross-env": "^5.2.0",
-    "fs-extra": "^7.0.1",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-info": "^5.2.1",
+    "@storybook/addon-knobs": "^5.2.1",
+    "@storybook/addon-options": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@wework/ray-core": "file:packages/core",
+    "babel-loader": "8.0.6",
+    "cross-env": "^6.0.0",
+    "fs-extra": "^8.1.0",
     "gatsby-remark-static-images": "^1.0.0",
     "html-loader": "^0.5.5",
-    "lodash": "^4.17.14",
-    "node-sass": "^4.10.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "sass-loader": "^7.1.0"
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "sass-loader": "^8.0.0"
   },
   "eslintConfig": {
     "globals": {
