--- a/packages/product-react/package.json
+++ b/packages/product-react/package.json
@@ -16,11 +16,11 @@
   "author": "WeWork Companies Inc.",
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/preset-typescript": "^7.6.0",
     "@wework/ray-core": "^1.9.0",
     "@wework/ray-core-react": "^1.12.2",
     "clsx": "^1.0.4",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.3"
   },
   "repository": {
     "type": "git",
@@ -28,34 +28,52 @@
     "directory": "packages/product-react"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/preset-env": "7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-a11y": "^5.1.11",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
+    "@storybook/addon-a11y": "^5.2.1",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@types/react-dom": "^16.9.1",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "commitizen": "^4.0.3",
+    "coveralls": "3.0.6",
+    "cz-conventional-changelog": "3.0.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "6.4.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-react": "7.14.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "jest": "^24.8.0",
+    "husky": "3.0.5",
+    "jest": "^24.9.0",
+    "lerna": "3.16.4",
+    "lint-staged": "9.4.0",
+    "prettier": "1.18.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "rollup": "^1.16.7",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.24.0",
+    "rollup-plugin-typescript2": "^0.24.2",
+    "stylelint": "^11.0.0",
     "typescript": "^3.6.2"
   },
   "publishConfig": {
