format code in files

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
       "eslint --fix",
       "git add"
     ],
-    "{apps,packages}/**/*.{test,story}.{ts,tsx}": "yarn run lint:ts-test --fix"
+    "*.{test,story}.{ts,tsx}": "yarn run lint:ts-test --fix"
   },
   "config": {
     "commitizen": {
