--- a/package.json
+++ b/package.json
@@ -26,27 +26,26 @@
     "@types/jest": "^24.0.18",
     "@types/react-dom": "^16.9.0",
     "@types/storybook__react": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "commitizen": "^3.0.7",
     "coveralls": "3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.2.0",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.13.0",
-    "husky": "^2.3.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "husky": "^3.0.9",
     "jest": "24.8.0",
     "lerna": "3.13.4",
     "lint-staged": "8.1.4",
     "prettier": "1.16.4",
-    "stylelint": "^9.10.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "tslint-react": "4.1.0"
+    "stylelint": "^9.10.1"
   },
   "scripts": {
     "dev": "lerna run dev --parallel",
@@ -62,7 +61,7 @@
     "lerna:publish": "npx lerna publish --yes",
     "lerna:version": "npx lerna version --yes",
     "netlify:build": "yarn clean && yarn build && npx lerna run netlify:build",
-    "lint:ts": "tslint --config tslint.json 'packages/**/*.{test,story}.ts{,x}'"
+    "lint:ts": "eslint  'packages/**/*.{test,story}.ts{,x}'"
   },
   "dependencies": {},
   "husky": {
@@ -79,12 +78,8 @@
       "prettier --write",
       "git add"
     ],
-    "*.js": [
+    "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "git add"
-    ],
-    "*.{ts,tsx}": [
-      "tslint --fix",
       "git add"
     ]
   },
