--- a/package.json
+++ b/package.json
@@ -59,9 +59,7 @@
     "lerna:version": "npx lerna version --yes",
     "netlify:build": "yarn clean && yarn build && npx lerna run netlify:build"
   },
-  "dependencies": {
-    "core-js": "^3.4.1"
-  },
+  "dependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
