--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
     "@storybook/react": "^5.2.6",
     "babel-loader": "8.0.5",
     "color": "^3.1.1",
+    "cross-env": "^6.0.3",
     "css-loader": "1.0.1",
     "del": "4.1.1",
     "emotion-theming": "^10.0.7",
