--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -29,11 +29,11 @@
     "gatsby": "^2.1.23",
     "gatsby-image": "2.0.20",
     "gatsby-plugin-google-analytics": "^2.0.19",
-    "gatsby-plugin-manifest": "^2.0.10",
+    "gatsby-plugin-manifest": "2.0.29",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "2.0.4",
-    "gatsby-plugin-sharp": "2.0.13",
+    "gatsby-plugin-sharp": "2.0.37",
     "gatsby-react-router-scroll": "^2.0.1",
     "gatsby-remark-autolink-headers": "^2.0.11",
     "gatsby-remark-component": "^1.1.3",
@@ -43,7 +43,7 @@
     "gatsby-remark-images": "3.0.11",
     "gatsby-source-filesystem": "2.0.9",
     "gatsby-transformer-remark": "^2.3.1",
-    "gatsby-transformer-sharp": "2.1.8",
+    "gatsby-transformer-sharp": "2.1.21",
     "markdown-it": "^8.4.2",
     "markdown-loader": "^4.0.0",
     "prismjs": "^1.15.0",
