--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "lerna:clean": "npx lerna run clean",
     "lerna:publish": "npx lerna publish --yes",
     "lerna:version": "npx lerna version --yes",
-    "site:build": "yarn clean && yarn build && npx lerna run site:build"
+    "site:build": "yarn clean && yarn build && npx lerna run netlify:build"
   },
   "dependencies": {},
   "husky": {
