--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  node: circleci/node@4.5.1
+
 machine:
   pre:
     - mkdir ~/.yarn-cache
@@ -120,6 +123,32 @@ jobs:
           name: 'Deploy'
           command: git push origin master:production
 
+  deploy:
+    executor:
+      name: docker-config
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
+          name: 'Build static site'
+          command: yarn site:build
+      - add_ssh_keys:
+          fingerprints:
+            - 'f2:ad:87:6b:39:67:71:e0:7e:4e:2a:63:bd:4e:65:1a'
+      - run:
+          name: 'Configure github user details for publish commit'
+          command: git config --global user.email "dg-engineering@wework.com" && git config --global user.name "Ray Bot"
+      - run:
+          name: 'Deploy static site to gh-pages'
+          command: |
+            git checkout gh-pages
+            git rm -r docs
+            mv -v .out docs
+            git add docs
+            git commit -m "Updated static site to version $CIRCLE_SHA1"
+            git push
+
 workflows:
   version: 2
   'ray-ci-cd':
@@ -129,6 +158,7 @@ workflows:
             branches:
               ignore:
                 - production
+                - gh-pages
       - test-unit:
           requires:
             - checkout-code
@@ -136,6 +166,7 @@ workflows:
             branches:
               ignore:
                 - production
+                - gh-pages
       - build:
           requires:
             - checkout-code
@@ -144,6 +175,7 @@ workflows:
               ignore:
                 - master
                 - production
+                - gh-pages
       - build_and_release:
           requires:
             - test-unit
@@ -158,3 +190,8 @@ workflows:
             branches:
               only:
                 - master
+      - deploy:
+          filters:
+            branches:
+              only:
+                - production
